Prevent node cost clipping side.

--- a/src/app/components/node/node.component.less
+++ b/src/app/components/node/node.component.less
@@ -20,6 +20,11 @@
   mat-icon { fill: var(--color-candle); }
 }
 
+div[data-position="left"] .cost {
+  left: unset;
+  right: 0;
+}
+
 .seasonal mat-icon { fill: var(--color-candle-seasonal); }
 
 mat-icon {
